--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,9 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.16.5-36.1.0'
 
+    implementation "com.konghq:unirest-java:3.6.00"
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
